--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <section>
-            <div class="text">Hey there! Thanks for visiting this page!<br/> <span style="margin-left: 25%;"> You are <span style="color: blue; size: 1000px; font-weight: bold; font-style: italic;">WELCOMED!</span></span></div>
+            <div class="text">Hey there! Thanks for visiting this page!<br/> <span style="align-content: center;"> You are <span style="color: blue; size: 1000px; font-weight: bold; font-style: italic;">WELCOMED!</span></span>
             <div class="paragraph"><span style="font-size: larger; font-family: monospace; color: blueviolet;">
                 While vacations are running out, I tried to make something new.Srcolling across the web, I got interest to create
                 this webpage and add my current details.</span><br/><br/>
@@ -21,12 +21,11 @@
                     <li>♥Also love to build Websites, App and Algorithms</li>
                     </ul>
                 </ul>
-            </div>
             <div style="color: brown; font-size: x-large; font-family: monospace; position: absolute;
-            margin-top: 44%;
+            margin-top: 3%;
             margin-left: 50%;
             transform: translate(-50%);
-            z-index: 1; font-weight: bold;">Visit my main website <a href="https://souvikm02.netlify.app/">Here</a></div>
+            z-index: 1; font-weight: bold; position: absolute;">Visit my main website <a href="https://souvikm02.netlify.app/">Here</a></div></div></div>
             <img src="bg.jpg" class="bg">
             <div id="particles-js"></div>
         </section>
