--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <section>
             <div class="text">Hey there! Thanks for visiting this page!<br/> <span style="align-content: center;"> You are <span style="color: blue; size: 1000px; font-weight: bold; font-style: italic;">WELCOMED!</span></span>
             <div class="paragraph"><span style="font-size: larger; font-family: monospace; color: blueviolet;">
-                While vacations are running out, I tried to make something new.Srcolling across the web, I got interest to create
+                While vacations are running out, I tried to make something new.Scrolling across the web, I got interest to create
                 this webpage and add my current details.</span><br/><br/>
                 <ul style="list-style-type:none">
                     <li>🏠I belong from Steel City, Durgapur in West Bengal, India</li><br/>
