--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     </head>
     <body>
         <section>
-            <div class="text">Hey there! Thanks for visiting this page!<br/> <span style="align-content: center;"> You are <span style="color: blue; size: 1000px; font-weight: bold; font-style: italic;">WELCOMED!</span></span>
+            <div class="text">Hey there! Thanks for visiting this page..<br>
+            <span style="align-content: center; margin-left: 0%;"> You are <span style="color: rgb(253, 30, 30); size: 1000px; font-weight: bold; font-style: italic;">WELCOME!</span></span>
             <div class="paragraph"><span style="font-size: larger; font-family: monospace; color: blueviolet;">
-                While vacations are running out, I tried to make something new.Scrolling across the web, I got interest to create
+                While vacations are running out, I tried to make something new. Scrolling across the web, I got interest to create
                 this webpage and add my current details.</span><br/><br/>
                 <ul style="list-style-type:none">
                     <li>🏠I belong from Steel City, Durgapur in West Bengal, India</li><br/>
-                    My projects Include:
-                    <ul style="list-style-type:none">
+                    <span style="color: brown; font-size:xx-large;">My projects Include:</span>
+                    <ul style="list-style-type:none"><br>
                     <li>🟧CUBE DODGE: DIY PROJECTS : Subway surfer type game with CUBE as object</li><br>
                     <li>🧩PUZZLE-GAME</li><br>
                     <li>📜PAPER-CHAT: Online posting website</li><br>
@@ -23,7 +24,7 @@
                 </ul>
             <div style="color: brown; font-size: x-large; font-family: monospace; position: absolute;
             margin-top: 3%;
-            margin-left: 50%;
+            margin-left: 40%;
             transform: translate(-50%);
             z-index: 1; font-weight: bold; position: absolute;">Visit my main website <a href="https://souvikm02.netlify.app/">Here</a></div></div></div>
             <img src="bg.jpg" class="bg">
